# horse-farm-simulator

./: .gitignore  README.md  REFACTOR-HANDOFF-PLAN.md  main.py  mission.md  mvp-001-horse-creation-TASKS.md  mvp-001-horse-creation.md  mvp-002-care-training-first-ride-TASKS.md  mvp-002-care-training-first-ride.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/: playdate-story-schema.md  playdate_story_suggestions_template.json
scripts/: summarize_telemetry.py  validate_stories.py
src/pferdehof_bot/: __init__.py  bot.py  command_registry.py  config.py
src/pferdehof_bot/cogs/: __init__.py  core.py
src/pferdehof_bot/domain/: __init__.py
src/pferdehof_bot/repositories/: __init__.py  player_repository.py
src/pferdehof_bot/services/: __init__.py  candidate_generator.py  care.py  flow_utils.py  lifecycle.py  moderation.py  onboarding.py  playdate_story_engine.py  presentation_models.py  progression.py  ride_outcomes.py  social.py  (+3 more)
src/pferdehof_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stories/: builtin.json
tests/: test_bot_factory.py  test_candidate_generator.py  test_care_service.py  test_command_registry.py  test_config.py  test_core_cog_slash.py  test_lifecycle_service.py  test_moderation.py  test_mvp001_integration.py  test_mvp002_integration.py  test_onboarding_service.py  test_playdate_story_engine.py  test_player_repository.py  test_progression_service.py  test_readme_mvp002_exit.py  test_ride_outcomes.py  test_social_service.py  test_stable_service.py  test_state_presentation.py  test_telemetry.py
(+3 files in other folders)
